# x509-verifier

./: Makefile  README.md  meson.build  meson.options
artifacts/: ed448-self-signed.der  gost-notes.txt  meson.build  rfc4491-bis-cert2.pem  rfc4491-bis-cert3.der  rfc4491-bis-cert3.pem  rfc4491-bis.pem
artifacts/all-gost-sig2012/: 006406096-06082a85030701010303.der  048029727-06082a85030701010303.der  063481243-06082a85030701010302.der  068244192-06082a85030701010303.der  068247780-06082a85030701010302.der  070615695-06082a85030701010302.der  128899480-06082a85030701010302.der  132464883-06082a85030701010303.der  144359800-06082a85030701010302.der  144361764-06082a85030701010302.der  160997560-06082a85030701010302.der  161007193-06082a85030701010302.der  162190127-06082a85030701010302.der  166948401-06082a85030701010303.der  196672558-06082a85030701010303.der  210945584-06082a85030701010302.der  241928784-06082a85030701010303.der  cert2019.crt.der  rfc4491-bis-fixed-with-recomputed-signature.der  root2013.crt.der  test-2012.cer.der
artifacts/all-gosts/: 000856024-06062a8503020203.der  001623227-06062a8503020213.der  002175239-06062a8503020203.der  002453118-06062a8503020203.der  002852432-06062a8503020203.der  002922715-06062a8503020213.der  005280936-06062a8503020203.der  005500351-06062a8503020203.der  005972695-06062a8503020213.der  006398320-06062a8503020203.der  008783998-06062a8503020213.der  008794274-06062a8503020213.der  009965837-06062a8503020203.der  009967527-06062a8503020203.der  009973142-06082a85030701010302.der  011155095-06062a8503020213.der  011964811-06062a8503020203.der  012340843-06062a8503020203.der  015513590-06062a8503020213.der  016713780-06062a8503020203.der  017099040-06062a8503020213.der  018299970-06082a85030701010302.der  018389914-06062a8503020213.der  018780583-06062a8503020213.der  019100404-06062a8503020213.der  020664542-06062a8503020203.der  021865614-06062a8503020203.der  023049766-06062a8503020213.der  023334516-06062a8503020213.der  023823338-06062a8503020203.der  024242977-06082a85030701010302.der  024403369-06062a8503020203.der  025037233-06062a8503020213.der  026157981-06062a8503020213.der  026623117-06062a8503020203.der  027166973-06062a8503020213.der  027395674-06062a8503020203.der  028365798-06062a8503020203.der  028615102-06062a8503020213.der  029382501-06062a8503020213.der  (+417 more)
artifacts/all-gosts-self-signed/: 005751818-06062a8503020203.der  044837304-06062a8503020203.der  185443972-06062a8503020203.der  208708458-06062a8503020213.der  276888037-06062a8503020213.der  kaluga-astral.crt.der  rfc4491-bis.der  rt1-2013.crt.der  sapfirca2.crt.der
artifacts/exotic/ED25519/: 005170208-06032b6570.der  021853263-06032b6570.der  023041368-06032b6570.der  025352485-06032b6570.der  043108823-06032b6570.der  046750604-06032b6570.der  072969733-06032b6570.der  081282420-06032b6570.der  093161530-06032b6570.der  095542697-06032b6570.der  118154829-06032b6570.der  124094094-06032b6570.der  125307580-06032b6570.der  134785483-06032b6570.der  143133324-06032b6570.der  148959738-06032b6570.der  149097291-06032b6570.der  154944221-06032b6570.der  156033266-06032b6570.der  169321207-06032b6570.der  178733628-06032b6570.der  178759706-06032b6570.der  184744146-06032b6570.der  191898787-06032b6570.der  207283571-06032b6570.der  213132252-06032b6570.der  240659085-06032b6570.der  252545042-06032b6570.der  253646699-06032b6570.der  289523579-06032b6570.der
artifacts/exotic/ED448/: 004490390-06032b6571.der  009090283-06032b6571.der  011889962-06032b6571.der
artifacts/exotic/GOST/: README
artifacts/exotic/GOST/06062a8503020203/: 001241590-06062a8503020203.der  003473095-06062a8503020203.der  007066507-06062a8503020203.der  007964036-06062a8503020203.der  008258354-06062a8503020203.der  008780390-06062a8503020203.der  011924156-06062a8503020203.der  012370383-06062a8503020203.der  014367740-06062a8503020203.der  014725822-06062a8503020203.der  014731025-06062a8503020203.der  014831566-06062a8503020203.der  018442634-06062a8503020203.der  018648768-06062a8503020203.der  019302916-06062a8503020203.der  021255821-06062a8503020203.der  029021830-06062a8503020203.der  030180617-06062a8503020203.der  033170653-06062a8503020203.der  033384144-06062a8503020203.der  033869479-06062a8503020203.der  034128574-06062a8503020203.der  034575703-06062a8503020203.der  034944442-06062a8503020203.der  034946642-06062a8503020203.der  036128397-06062a8503020203.der  039940801-06062a8503020203.der  040265018-06062a8503020203.der  040404449-06062a8503020203.der  040484377-06062a8503020203.der  040540685-06062a8503020203.der  042367150-06062a8503020203.der  045642373-06062a8503020203.der  047692282-06062a8503020203.der  050856617-06062a8503020203.der  052296129-06062a8503020203.der  053396170-06062a8503020203.der  053545180-06062a8503020203.der  054743067-06062a8503020203.der  056525141-06062a8503020203.der  (+185 more)
artifacts/exotic/GOST/06062a8503020204/: 009513431-06062a8503020204.der  107707447-06062a8503020204.der  136533309-06062a8503020204.der  155644467-06062a8503020204.der  165755624-06062a8503020204.der  172328109-06062a8503020204.der  234872764-06062a8503020204.der  247069117-06062a8503020204.der  265038394-06062a8503020204.der  269935741-06062a8503020204.der
artifacts/exotic/SM2-SM3/: 029774993-06082a811ccf55018375.der  042058890-06082a811ccf55018375.der  128825517-06082a811ccf55018375.der  134644419-06082a811ccf55018375.der  202372861-06082a811ccf55018375.der  212075933-06082a811ccf55018375.der  225146933-06082a811ccf55018375.der  233515276-06082a811ccf55018375.der
artifacts/exotic/gost-root/: BuryatiaCA.crt.der  CAURIIT2.crt.der  CentrInform.crt.der  GNIVCFNSRUS.crt.der  GiS00.crt.der  MKB-ICA.crt.der  Root_Gazprom_CA.crt.der  citrtca_v1_1.crt.der  infotrust-2009.crt.der  mosenergo_ca1.crt.der  root_gazprom_ca1.crt.der  rt1-2018.crt.der  sapfirca.crt.der
artifacts/tempo/: 132757654-06062a8503020203.der  134214252-06062a8503020203.der  205708736-06062a8503020203.der
src/: cert-extract.c  main.c  (+15 more)
tests/: list_cert_pairs.py  meson.build  test-streebog.c  test.c
(+216 files in other folders)
